# simple_web_scraper

./: .gitignore  README.md  pyproject.toml  scraper.py
